// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should render properly for PANEL 1`] = `
.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
  >
    <button
      aria-label="Expand Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      Hi
    </h4>
  </div>
</div>
`;

exports[`<Accordion /> should render properly for PRIMARY 1`] = `
.emotion-4 {
  background-color: #3b3b3b;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 700;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
  >
    <button
      aria-label="Expand Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      Hi
    </h4>
  </div>
</div>
`;
